@@ -13,16 +13,26 @@ require('menu.php');
 echo "<h1>Contests</h1>\n\n";
 
 $curcont = getCurContest();
-$res = $DB->q('TABLE SELECT *,
-               UNIX_TIMESTAMP(starttime) as start_u,
-               UNIX_TIMESTAMP(endtime) as end_u
+
+if ( isset($_POST['unfreeze']) ) {
+	$docid = array_pop(array_keys($_POST['unfreeze']));
+	if ( $docid != $curcont['cid'] ) {
+		error("Can only unfreeze for current contest!");
+	}
+	$DB->q('UPDATE contest SET unfreezetime = NOW() WHERE cid = %i',
+		$docid);
+}
+
+$res = $DB->q('TABLE SELECT *
                FROM contest ORDER BY starttime DESC');
 
 if( count($res) == 0 ) {
 	echo "<p><em>No contests defined</em></p>\n\n";
 } else {
+	echo "<form action=\"contests.php\" method=\"post\">\n";
 	echo "<table class=\"list\">\n<tr><th>CID</th><th>starts</th><th>ends</th>" .
-		"<th>last<br />scoreupdate</th><th>name</th></tr>\n";
+		"<th>freeze<br />scores</th><th>unfreeze<br />scores</th><th>name</th>" .
+		"<th>&nbsp;</th></tr>\n";
 	foreach($res as $row) {
 		echo "<tr" .
 			($row['cid'] == $curcont ? ' class="highlight"':'') . ">" .
@@ -34,10 +44,29 @@ if( count($res) == 0 ) {
 			"\t<td title=\"".htmlentities(@$row['lastscoreupdate']) . "\">" .
 			( isset($row['lastscoreupdate']) ?
 			  printtime($row['lastscoreupdate']) : '-' ) . "</td>\n" .
-			"\t<td>" . htmlentities($row['contestname']) . "</td>\n" .
-			"</tr>\n";
+			"\t<td title=\"".htmlentities(@$row['unfreezetime']) . "\">" .
+			( isset($row['unfreezetime']) ?
+			  printtime($row['unfreezetime']) : '-' ) . "</td>\n" .
+			"\t<td>" . htmlentities($row['contestname']) . "</td>\n";
+
+		// display an unfreeze scoreboard button, only for the current
+		// contest (unfreezing undisplayed scores makes no sense) and
+		// only if the contest has already finished, and the scores have
+		// not already been unfrozen.
+		echo "\t<td>";
+		if ( $row['cid'] == $curcont && isset($row['lastscoreupdate']) ) {
+			echo "<input type=\"submit\" name=\"unfreeze[" . $row['cid'] .
+				"]\" value=\"unfreeze scoreboard now\"" ;
+			if ( strtotime($row['endtime']) > time() ||
+				(isset($row['unfreezetime']) && strtotime($row['unfreezetime']) <= time())
+				) {
+				echo " disabled=\"disabled\"";
+			}
+			echo " />";
+		}
+		echo "</td>\n</tr>\n";
 	}
-	echo "</table>\n\n";
+	echo "</table>\n</form>\n\n";
 }
 
 require('../footer.php');
