@@ -8,6 +8,9 @@ Version 1.4.0 - SVN
  - Fix possible buffer overflow in submitcommon.cc; Thanks to
    Lennert Buytenhek for pointing out.
  - Add option to commandline submit to use websubmit (Closes: #1582376).
+ - Add unfreezetime field to contests which allows to display the final
+   standings to teams and public, and a button to unfreeze right away
+   (Closes: #1582370).
  - Add problem color to MySQL DB and show in scoreboard and balloon info.
  - Add team summary to all main team pages.
  - Add check_float program to compare floating point output.
